# rust-mumble-protocol

./: .gitignore  Cargo.toml  build.rs
examples/: echo_client.rs
src/: crypt.rs  lib.rs  voice.rs
