[package]
name = "mumble-protocol-2x"
version = "0.6.0"
authors = [
  "Marco Rebhan <me@dblsaiko.net>",
  "Jonas Herzig <me@johni0702.de>",
  "Jack 'Spartanjackwar' Moss"
]
edition = "2024"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Spartanjackwar/rust-mumble-protocol"

[features]
default = ["openssl", "tokio-codec"]
webrtc-extensions = []
tokio-codec = ["tokio-util"]

[build-dependencies]
protobuf-codegen = "3"
protoc-bin-vendored = "3.2.0"

[dependencies]
bytes = "1.0"
byteorder = "1"
tokio-util = { version = "0.7", features = ["codec", "net"], optional = true }
tokio = { version = "1.0", features = ["full"] }
asynchronous-codec = { version = "0.7", optional = true }
protobuf = "3"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
cfg-if = "1.0.0"
thiserror = "2.0.18"
aes = "0.8.4"

[dev-dependencies]
argparse = "0.2"
futures = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
